Fix main page on ios

--- a/src/blocks/modules/header/_header.sass
+++ b/src/blocks/modules/header/_header.sass
@@ -148,7 +148,7 @@
 	&__menu
 		@include lg-block
 			display: none
-		@include sm-block
+		@include from(359px)
 			margin-right: 16px
 		width: 30px
 		height: 30px
@@ -159,7 +159,7 @@
 		align-items: center
 		justify-content: center
 		margin-left: -15px
-		margin-right: 6px
+		margin-right: 10px
 
 		.yamogu &
 			background: #844894
