--- a/src/blocks/modules/main/_main.sass
+++ b/src/blocks/modules/main/_main.sass
@@ -5,22 +5,21 @@
 	display: flex
 	align-items: center
 	width: 100%
-	min-height: 100vh
-	height: 100%
+	min-height: 100%
+	height: 100vh
 	flex-direction: column
 	@include lg-block
 		flex-direction: row
 
 .main-block
-	display: flex
-	flex-direction: column
-	justify-content: space-between
-	align-items: flex-start
-	flex-basis: 100%
+	text-align: center
 	width: 100%
-	height: auto
-
+	height: 100%
 	@include lg-block
+		display: flex
+		flex-direction: column
+		justify-content: space-between
+		align-items: flex-start
 		flex-basis: 50%
 		height: 100%
 		padding-top: 80px
@@ -51,10 +50,16 @@
 			&:hover
 				background-position: center right 25px
 	img
-		margin-top: 20px
+		display: block
 		max-width: 100%
+		margin: 20px auto 0
 		@include lg-block
+			margin-left: 0
+			margin-right: 0
 			min-height: 140px
+	h1
+		@include to($break_lg)
+			margin: auto
 .main-left
 	background: url('../img/main-left.jpg') no-repeat
 	background-size: cover
